--- a/build.gradle
+++ b/build.gradle
@@ -10,21 +10,22 @@ buildscript {
 	}
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+allprojects {
+	repositories {
+		mavenCentral()
+	}
 
-group = 'com.cece.alex.pos'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+	apply plugin: 'java'
+	apply plugin: 'eclipse'
+	apply plugin: 'org.springframework.boot'
+	apply plugin: 'io.spring.dependency-management'
 
-repositories {
-	mavenCentral()
-}
+	group = 'com.cece.alex.pos'
+	version = '0.0.1-SNAPSHOT'
+	sourceCompatibility = 1.8
 
-
-dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	dependencies {
+		compile('org.springframework.boot:spring-boot-starter-web')
+		testCompile('org.springframework.boot:spring-boot-starter-test')
+	}
 }
