Refactored our layered app into a hexagonal architecture

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,18 @@ nbdist/
 /checkout/out/
 /point-of-sale/out/
 /order/out/
+/checkout/build/
+/checkout/checkout-adapters/build/
+/checkout/checkout-adapters/out/
+/checkout/checkout-core/out/
+/checkout/checkout-core/build/
+/checkout/checkout-endpoint/build/
+/checkout/checkout-endpoint/out/
+/checkout/checkout-interfaces/build/
+/checkout/checkout-interfaces/out/
+/order/build/
+/order/order-adapters/build/
+/order/order-core/build/
+/order/order-endpoint/build/
+/order/order-interfaces/build/
+/point-of-sale/build/
