--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,28 @@
 buildscript {
-	ext {
-		springBootVersion = '2.0.0.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '2.0.0.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
 allprojects {
-	repositories {
-		mavenCentral()
-	}
+    repositories {
+        mavenCentral()
+    }
 
-	apply plugin: 'java'
-	apply plugin: 'eclipse'
-	apply plugin: 'org.springframework.boot'
-	apply plugin: 'io.spring.dependency-management'
+    group = 'com.cece.alex.pos'
+    version = '0.0.1-SNAPSHOT'
+//	sourceCompatibility = 1.8
 
-	group = 'com.cece.alex.pos'
-	version = '0.0.1-SNAPSHOT'
-	sourceCompatibility = 1.8
+    apply plugin: 'java'
+    apply plugin: 'eclipse'
 
-	dependencies {
-		compile('org.springframework.boot:spring-boot-starter-web')
-		testCompile('org.springframework.boot:spring-boot-starter-test')
-	}
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+    }
 }
