Refactored to have the package structure I think I remember.. and added a fake repository to show switching of adapter

--- a/point-of-sale/build.gradle
+++ b/point-of-sale/build.gradle
@@ -5,8 +5,10 @@ apply plugin: 'io.spring.dependency-management'
 dependencies {
     compile project(':checkout:checkout-core')
     compile project(':checkout:checkout-interfaces')
+    compile project(':checkout:checkout-endpoints')
     compile project(':order:order-core')
-    compile project(':order:order-interfaces')
+    compile project(':order:order-adapters')
+    compile project(':order:order-endpoints')
     compile('org.springframework.boot:spring-boot-starter-web')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
