--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ nbdist/
 /order/order-endpoint/build/
 /order/order-interfaces/build/
 /point-of-sale/build/
+/order/order-adapters/out/
+/order/order-core/out/
