--- a/order/order-adapters/build.gradle
+++ b/order/order-adapters/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
-    compile project(':order:order-interfaces')
+    compile project(':order:order-core')
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
