--- a/order/order-core/build.gradle
+++ b/order/order-core/build.gradle
@@ -1,5 +1,14 @@
+group 'com.cece.alex.pos'
+version '0.0.1-SNAPSHOT'
+
+apply plugin: 'java'
+
+sourceCompatibility = 1.8
+
+repositories {
+    mavenCentral()
+}
+
 dependencies {
-    compile project(':order:order-adapters')
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
